--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
   <div class="page">
     <section class="header">
-      <div class="logo logo_place_header">
+      <div class="logo_place_header">
         <img src="./images/logo_place_header.svg" alt="Логотип ЯП">
       </div>
       <div class="header__title">
@@ -68,8 +68,8 @@
           <div class="cards__title">
             <h4 class="cards__title_h4">Два вида внимания</h4>
           </div>
-          <div class="cards__text">
-            <p class="cards__text_p">Глубокие знания возникают, если чередовать сфокусированное и рассеянное мышление.</p>
+          <div class="cards__description">
+            <p class="cards__description_p">Глубокие знания возникают, если чередовать сфокусированное и рассеянное мышление.</p>
           </div>
         </div>
         <div class="cards__item">
@@ -79,8 +79,8 @@
           <div class="cards__title">
             <h4 class="cards__title_h4">Recall</h4>
           </div>
-          <div class="cards__text">
-            <p class="cards__text_p">Вспоминайте изученное — это позволит соединить разрозненные порции памяти.</p>
+          <div class="cards__description">
+            <p class="cards__description_p">Вспоминайте изученное — это позволит соединить разрозненные порции памяти.</p>
           </div>
         </div>
         <div class="cards__item">
@@ -90,8 +90,8 @@
           <div class="cards__title">
             <h4 class="cards__title_h4">Интерливинг</h4>
           </div>
-          <div class="cards__text">
-            <p class="cards__text_p">Изучайте несколько навыков одновременно, они обогащают друг друга.</p>
+          <div class="cards__description">
+            <p class="cards__description_p">Изучайте несколько навыков одновременно, они обогащают друг друга.</p>
           </div>
         </div>
         <div class="cards__item">
@@ -101,8 +101,8 @@
           <div class="cards__title">
             <h4 class="cards__title_h4">Вопросы</h4>
           </div>
-          <div class="cards__text">
-            <p class="cards__text_p">Слушая преподавателя, придумывайте хороший вопрос, который вас действительно волнует.</p>
+          <div class="cards__description">
+            <p class="cards__description_p">Слушая преподавателя, придумывайте хороший вопрос, который вас действительно волнует.</p>
           </div>
         </div>
         <div class="cards__item">
@@ -112,8 +112,8 @@
           <div class="cards__title">
             <h4 class="cards__title_h4">Иллюзия компетентности</h4>
           </div>
-          <div class="cards__text">
-            <p class="cards__text_p">Повторите про себя, запишите, расскажите другу: вам только кажется, что вы владеете новой темой.</p>
+          <div class="cards__description">
+            <p class="cards__description_p">Повторите про себя, запишите, расскажите другу: вам только кажется, что вы владеете новой темой.</p>
           </div>
         </div>
       </div>
@@ -136,7 +136,7 @@
       </div>
     </section>
     <section class="oakley">
-      <div class="two-columns two-columns__padding">
+      <div class="two-columns">
         <div class="two-columns__brief">
           <h4 class="two-columns__brief_h4">История Барбары Оакли</h4>
         </div>
@@ -319,7 +319,7 @@
     <section class="footer table_theme_dark">
       <nav class="footer__columns">
         <div class="footer__columns_content_copyright">
-          <div class="logo logo_place_footer">
+          <div class="logo_place_footer">
             <a href="#">
               <img src="./images/logo_place_footer.svg" alt="Логотип ЯП в нижнем меню">
             </a>
@@ -353,15 +353,18 @@
               <ul class="table__heading_theme_dark">
                 <li class="footer__column-link">
                   <a class="footer__column-link_a" href="#">
-                    <img src="./images/instagram_color_white.svg" alt="Логотип YouTube в нижнем меню">YouTube</a>
+                    <img class="social-icon" src="./images/instagram_color_white.svg" alt="Логотип YouTube в нижнем меню">YouTube>
+                  </a>
                 </li>
                 <li class="footer__column-link footer__column-link_margin">
                   <a class="footer__column-link_a" href="#">
-                    <img src="./images/vk_color_white.svg" alt="Логотип Вконтакте в нижнем меню">Вконтакте</a>
+                    <img class="social-icon" src="./images/vk_color_white.svg" alt="Логотип Вконтакте в нижнем меню">Вконтакте>
+                  </a>
                 </li>
                 <li class="footer__column-link">
                   <a class="footer__column-link_a" href="#">
-                  <img src="./images/tiktok-icon.svg" alt="Логотип TikTok в нижнем меню">TikTok</a>
+                  <img class="social-icon" src="./images/tiktok-icon.svg" alt="Логотип TikTok в нижнем меню">TikTok>
+                </a>
                 </li>
               </ul>
             </div>
