--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
         alt="Верный друг обязательно поднимет настроение!">
       <div class="header__square-pic rotation"></div>
     </header>
-    <article class="description">
-      <div class="two-columns">
+    <section class="description">
+      <article class="two-columns">
         <h2 class="two-columns__brief">Главные проблемы в обучении</h2>
         <div class="two-columns__main-text">
           <p class="two-columns__paragraph">Ни в школе, ни в институте нас не учат тому, как правильно изучать материал.
@@ -40,8 +40,8 @@
           <p class="two-columns__paragraph">Конкретные техники и упражнения помогают изменить подход к обучению, сделать
             его эффективным и захватывающим. Эти же техники применяются на примере обучения в Практикуме.</p>
         </div>
-      </div>
-    </article>
+      </article>
+    </section>
     <section class="techniques">
       <h2 class="section-title">Техники обучения</h2>
       <h3 class="section-subtitle">Пять практик от Барбары Оакли</h3>
@@ -89,8 +89,8 @@
         </li>
       </ul>
     </section>
-    <article class="oakley">
-      <div class="two-columns">
+    <section class="oakley">
+      <article class="two-columns">
         <h2 class="two-columns__brief">История Барбары Оакли</h2>
         <div class="two-columns__main-text">
           <p class="two-columns__paragraph">С детства Барбаре не давалась математика. Она считала себя законченным
@@ -99,8 +99,8 @@
             тогда Барбара придумала свой подход к точным наукам. Оказалось, если вам что-то «плохо даётся», ваши добытые
             трудом знания гораздо глубже, чем у тех, кому всё ясно с первого взгляда.</p>
         </div>
-      </div>
-    </article>
+      </article>
+    </section>
     <section class="feynman">
       <h2 class="feynman__title">Метод Фейнмана</h2>
       <h3 class="feynman__subtitle">Выучить и не забыть</h3>
@@ -151,12 +151,10 @@
       <div class="khan__container">
         <p class="khan__author">Салман Хан</p>
         <h2 class="khan__title">Весь мир — школа</h2>
-        <blockquote style="margin: 0;">
-          <p class="khan__quote">
+        <blockquote class="khan__quote">
             Страсть и новаторство Сала Хана меняют процесс обучения миллионов студентов по всему миру. Книгу «Весь мир —
             школа» нужно прочитать всем, кто занимается образованием — так учащиеся повсюду смогут получить навыки и
             знания, которые приносят успех в школе, карьере и жизни.
-          </p>
         </blockquote>
         <p class="khan__quote-author">Салман Хан</p>
         <p class="khan__quote-author-subline">Кинорежиссер, продюсер</p>
@@ -167,7 +165,7 @@
       </div>
 
     </section>
-    <section class="kaufman kaufman_theme_dark">
+    <section class="kaufman">
       <h2 class="section-title section-title_theme_dark">Принципы обучения</h2>
       <h3 class="section-subtitle section-subtitle_theme_dark">От Джоша Кауфмана</h3>
       <ol class="table table_theme_dark">
@@ -244,13 +242,13 @@
         </li>
       </ul>
     </section>
-    <footer class="footer footer_theme_dark">
+    <footer class="footer">
       <div class="footer__columns">
-        <div class="footer__column_content_copyright">
+        <div class="footer__column footer__column_content_copyright">
           <img class="logo logo_place_footer" src="./images/logo_place_footer.svg" alt="Логотип ЯП в нижнем меню">
           <p class="footer__author">&copy; Шашкин Антон</p>
         </div>
-        <nav class="footer__column_content_info">
+        <nav class="footer__column footer__column_content_info">
           <h4 class="footer__column-heading">О Практикуме</h4>
           <ul class="footer__column-links">
             <li class="footer__column-item">
@@ -265,7 +263,7 @@
           </ul>
 
         </nav>
-        <nav class="footer__column_content_social">
+        <nav class="footer__column footer__column_content_social">
           <h4 class="footer__column-heading">Соцсети</h4>
           <ul class="footer__column-links">
             <li class="footer__column-item">
